// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Checkbox"
>
  <input
    aria-label="checkbox"
    class="ControlledInput"
    data-test-id="ctf-ui-checkbox"
    type="checkbox"
    value=""
  />
  <label
    class="Input__ghost Checkbox__ghost"
  >
    <svg
      class="Icon Icon--medium Icon--white"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M15.5303 3.96967C15.8232 4.26256 15.8232 4.73744 15.5303 5.03033L7.28033 13.2803C7.13968 13.421 6.94891 13.5 6.75 13.5C6.55109 13.5 6.36032 13.421 6.21967 13.2803L2.46967 9.53033C2.17678 9.23744 2.17678 8.76256 2.46967 8.46967C2.76256 8.17678 3.23744 8.17678 3.53033 8.46967L6.75 11.6893L14.4697 3.96967C14.7626 3.67678 15.2374 3.67678 15.5303 3.96967Z"
      />
    </svg>
  </label>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Checkbox my-extra-class"
>
  <input
    aria-label="checkbox"
    class="ControlledInput"
    data-test-id="ctf-ui-checkbox"
    type="checkbox"
    value=""
  />
  <label
    class="Input__ghost Checkbox__ghost"
  >
    <svg
      class="Icon Icon--medium Icon--white"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M15.5303 3.96967C15.8232 4.26256 15.8232 4.73744 15.5303 5.03033L7.28033 13.2803C7.13968 13.421 6.94891 13.5 6.75 13.5C6.55109 13.5 6.36032 13.421 6.21967 13.2803L2.46967 9.53033C2.17678 9.23744 2.17678 8.76256 2.46967 8.46967C2.76256 8.17678 3.23744 8.17678 3.53033 8.46967L6.75 11.6893L14.4697 3.96967C14.7626 3.67678 15.2374 3.67678 15.5303 3.96967Z"
      />
    </svg>
  </label>
</div>
`;
